added en locale

--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -11,4 +11,7 @@
         <file>QML/TopBar.qml</file>
         <file alias="icon">res/icon.png</file>
     </qresource>
+    <qresource prefix="/languages">
+        <file alias="en">languages/en.qm</file>
+    </qresource>
 </RCC>
