--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -10,6 +10,8 @@
         <file>QML/StartPage.qml</file>
         <file>QML/TopBar.qml</file>
         <file alias="icon">res/icon.png</file>
+        <file>QML/Header.qml</file>
+        <file>QML/About.qml</file>
     </qresource>
     <qresource prefix="/languages">
         <file alias="en">languages/en.qm</file>
