port for qt 5.5

--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -12,6 +12,7 @@
         <file alias="icon">res/icon.png</file>
         <file>QML/Header.qml</file>
         <file>QML/About.qml</file>
+        <file>QML/Theme.js</file>
     </qresource>
     <qresource prefix="/languages">
         <file alias="en">languages/en.qm</file>
