--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -28,5 +28,7 @@
         <file>InstallTemplate/installer.pro</file>
         <file>InstallTemplate/package.xml</file>
         <file>InstallTemplate/README</file>
+        <file>InstallTemplate/CreateDesktopEntry.sh</file>
+        <file>res/icon.png</file>
     </qresource>
 </RCC>
